feat: add new get note by id handler
